# rtos

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
iso/EFI/BOOT/: BOOTAA64.EFI  BOOTX64.EFI
iso/boot/: limine-bios.sys  limine.conf
kernel/: Cargo.toml  kernel-aarch64.ld  kernel-x86_64.ld
kernel/.cargo/: config.toml
kernel/.config/: cargo.toml
kernel/src/: alloc_handler.rs  crt.rs  gfx.rs  interrupt.rs  main.rs  panic.rs  reqs.rs
kernel/src/gfx/: internal.rs  mod.rs  print.rs
kernel/src/interrupt/: interrupt_aarch64.rs  interrupt_x64.rs
kernel/src/interrupt/interrupt_x64/: acpi.rs  apic.rs  handlers.rs  irq.rs
runner/: Cargo.toml  aarch64-none-none.json  build.rs  x86_64-none-none.json
runner/src/: main.rs
